add indentation and commenting sections

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -333,3 +333,71 @@
   author={Bakhuizen, Ellinor and Landelius, Cecilia},
   year={2019}
 }
+
+
+
+@article{lahtinen2005study,
+  title={A study of the difficulties of novice programmers},
+  author={Lahtinen, Essi and Ala-Mutka, Kirsti and J{\"a}rvinen, Hannu-Matti},
+  journal={Acm sigcse bulletin},
+  volume={37},
+  number={3},
+  pages={14--18},
+  year={2005},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{robins2003learning,
+  title={Learning and teaching programming: A review and discussion},
+  author={Robins, Anthony and Rountree, Janet and Rountree, Nathan},
+  journal={Computer science education},
+  volume={13},
+  number={2},
+  pages={137--172},
+  year={2003},
+  publisher={Taylor \& Francis}
+}
+
+@article{corritore1991novices,
+  title={What do novices learn during program comprehension?},
+  author={Corritore, Cynthia L and Wiedenbeck, Susan},
+  journal={International Journal of Human-Computer Interaction},
+  volume={3},
+  number={2},
+  pages={199--222},
+  year={1991},
+  publisher={Taylor \& Francis}
+}
+
+
+@article{andrzejewska2020development,
+  title={Development of program comprehension skills by novice programmers--longitudinal eye tracking studies},
+  author={Andrzejewska, Magdalena and Kotoniak, Pawe{\l}},
+  journal={Informatics in Education},
+  volume={19},
+  number={4},
+  pages={521--541},
+  year={2020},
+  publisher={Vilnius University Institute of Data Science and Digital Technologies}
+}
+
+
+@article{javier2021understanding,
+  title={Understanding their voices from within: difficulties and code comprehension of life-long novice programmers},
+  author={Javier, Billy},
+  journal={International Journal of Arts, Sciences and Education},
+  volume={1},
+  number={1},
+  pages={53--73},
+  year={2021}
+}
+
+
+@inproceedings{inproceedings,
+author = {Izu, Cruz and Mirolo, Claudio},
+year = {2024},
+month = {05},
+pages = {1-10},
+title = {Towards Comprehensive Assessment of Code Quality at CS1-Level: Tools, Rubrics and Refactoring Rules},
+doi = {10.1109/EDUCON60312.2024.10578672}
+}
