--- a/config.tex
+++ b/config.tex
@@ -1141,6 +1141,8 @@
 \usepackage{longtable}
 \usepackage{tikz}
 \usepackage{adjustbox}
+\usepackage{longtable}
+\usepackage{afterpage}
 
 
 % EN: Show LaTeX commands and their results in the document
