--- a/bibliography.bib
+++ b/bibliography.bib
@@ -401,3 +401,44 @@ pages = {1-10},
 title = {Towards Comprehensive Assessment of Code Quality at CS1-Level: Tools, Rubrics and Refactoring Rules},
 doi = {10.1109/EDUCON60312.2024.10578672}
 }
+
+
+@article{hanenberg2024indentation,
+  title={Indentation and reading time: a randomized control trial on the differences between generated indented and non-indented if-statements},
+  author={Hanenberg, Stefan and Morzeck, Johannes and Gruhn, Volker},
+  journal={Empirical Software Engineering},
+  volume={29},
+  number={5},
+  pages={134},
+  year={2024},
+  publisher={Springer}
+}
+
+
+@inproceedings{morzeck2023indentation,
+  title={Indentation in Source Code: A Randomized Control Trial on the Readability of Control Flows in Java Code with Large Effects.},
+  author={Morzeck, Johannes and Hanenberg, Stefan and Werger, Ole and Gruhn, Volker},
+  booktitle={ICSOFT},
+  pages={117--128},
+  year={2023}
+}
+
+@inproceedings{steidl2013quality,
+  title={Quality analysis of source code comments},
+  author={Steidl, Daniela and Hummel, Benjamin and Juergens, Elmar},
+  booktitle={2013 21st international conference on program comprehension (icpc)},
+  pages={83--92},
+  year={2013},
+  organization={Ieee}
+}
+
+
+@article{hassan2022code,
+  title={Code Comment Analysis--A Review Paper},
+  author={Hassan, Syed Zohaib and Irshad, Ayesha and Mir, Jamaluddin and Aslam, Ayesha and Ayaz, Kalsoom and Bawazir, Muhammad Awais},
+  journal={Journal of Management Practices, Humanities and Social Sciences},
+  volume={6},
+  number={1},
+  pages={88--105},
+  year={2022}
+}
