--- a/content.tex
+++ b/content.tex
@@ -265,16 +265,27 @@ textextex
 \section{Code comprehension)}
 \section{Indentation}
 
-indentation 
+Indentation is an approach used to organize source code. At the beginning of a code line, there is some space \cite{morzeck2023indentation}.
+This method is applied to define code fragments such as loops and conditions.  It can be observed that most of the source code examples in programming education are indented \cite{morzeck2023indentation}. In Java, for instance, it is often required to add a new line after an opening brace, and the lines inside are indented until the closing brace \cite{hanenberg2024indentation}.
+
+
+The level of indentation can vary in different programming languages and can be set as a personal preference \cite{bauer2017indentations}. Considering the programming language Java, there are many style guides suggestions for which indentation to use. The most commonly used suggestion is an indentation of four spaces. This level of indentation is proposed by style guides such as Oracle and Google \cite{bauer2017indentations}.
+Several IDEs, such as Visual Studio and IntelliJ, often use formatting tools that automatically apply indentation to the source code \cite{morzeck2023indentation}.
 
 
 \begin{figure} [H]
   \centering
   \includegraphics [scale=0.7]
   {figures/indentation_ex.png}
-  \caption{Non–indented and Indented Java code snippet \cite{hanenberg2024indentation}.}
+  \caption{Non–indented and indented Java code snippet \cite{hanenberg2024indentation}.}
   \label{fig:AnhangsChor}
 \end{figure}
+
+Figure … presents Java code snippet, which gives an output the words “Hello, world”  \cite{hanenberg2024indentation}.
+In the first code snippet, which is indented, some space is added before the main method and the loop.  In the second code snippet, which is not indented, no space is added. The additional space visualizes that particular code lines belong to another fragment. In the non-indented code snippet, it is difficult to detect the code structure. 
+ 
+
+
 
 
 
